tests/errors/error_const_assign.nimmy
# Error: Assigning to a constant (let)
let x = 5
x = 10